Improved contact card

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mac-portfolio",
+  "name": "noon-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
