--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-photo-album": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
