--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "qrcode.react": "^4.2.0",
